*gitlab-shell-5.0.0 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.0.0.ebuild:
  dev-vcs/gitlab-shell:   added ebuild for gitlab-shell-5.0.0; support for git-
  annex has been removed.

  14 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-shell-3.2.0-config-paths.patch, -gitlab-shell-4.0.3.ebuild:
  dev-vcs/gitlab-shell: deleted old ebuild

*gitlab-shell-4.0.3 (12 Dec 2016)

  12 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-4.0.3.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for gitlab-shell-4.0.3, a dependency of
  gitlab-ce-8.14.4

  23 Nov 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.5.0.ebuild,
  -gitlab-shell-3.6.1.ebuild:
  dev-vcs/gitlab-shell:  pruned old ebuilds

*gitlab-shell-4.0.0 (11 Nov 2016)

  11 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-4.0.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuilds for gitlab-shell-4.0.0, a dependency of
  gitlab-ce-8.14

  22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.4.0.ebuild,
  -gitlab-shell-3.6.0.ebuild:
  dev-vcs/gitlab-shell:  purged unneeded ebuilds

*gitlab-shell-3.6.6 (22 Oct 2016)

  22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.6.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for version 3.6.6, which is a dependency
  of gitlab-ce-8.13.0

  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.2.1.ebuild:
  dev-vcs/gitlab-shell:  removed obsolete version 3.2.1

*gitlab-shell-3.6.0 (23 Sep 2016)

  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for version 3.6.0; dependency of gitlab-
  ce-8.12.0

*gitlab-shell-3.5.0 (16 Sep 2016)

  16 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.5.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for versioin 3.5.0

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-shell-2.0.0-config-paths.patch, -gitlab-shell-3.0.0.ebuild,