@@ -4,10 +4,12 @@ DIST gitlab-shell-5.0.0.tar.gz 78585 SHA256 7611fdf0b64592365bdb6ba442a4263d129b
 DIST gitlab-shell-5.0.2.tar.gz 79009 SHA256 bb5125f12f2f3fbbb93aa78f6810cd62f97bda564d01112a831bf41d4e42ef34 SHA512 c960e1e2c3c9f35927255442f4e20b82af8881d123c3edeffe7ebdc6523fe2456ae1e7149527255eb5e3d2d369b4f70b7c902314d881a20b893fea9fac968f73 WHIRLPOOL dc5be75f111074c8e9f018533ddcef64edcded4c5f3003a3f7297d9153469894f4c8a3e387419055a3e51732daa9db8a3b936984a24f3b4d1a9e0cbc968a7119
 DIST gitlab-shell-5.0.3.tar.gz 625499 SHA256 41d78fa416170dbf052c59223ae7c6a3b882f789c36ca932d2e36b610e8b0161 SHA512 55354926c4504d196ccf0f269ec93484a18f4915bfbe292c9dcfa43c33ff8310cf5c1d126943d6c7e54f3f77317d9229666887fb825de404b7be0dea24f49a64 WHIRLPOOL 80fe5dcbc00fc2460731dbf3c604ca1646e9be61d1d53c88a53d48d16f97e6ee032fe210bc7a04c4bac1b726542f0eb645c15ec186a1de16256605ff320fdc0b
 DIST gitlab-shell-5.0.4.tar.gz 626142 SHA256 9947c9cf7e7f2e1c2af696cf4610c6e2ad256dcae42e95cc0c8dc387ad5d07e3 SHA512 2718e99a43ad934dfb6d8b3df47bab0b957fa362c84510434fdd07ed994bf53ab059569ff0da106c8bd5ebc49cc460694ad5fb2fec57f0fb0cbb297609a00d97 WHIRLPOOL 6666d2dcb06c156686080b6a0f489ef03d331bc8f20eeb996fe5ce51aeb25d2f334002c15e235c1ad21d808eee8617aa178a5ad974ea99ec8f89bd2478f7f9eb
+DIST gitlab-shell-5.0.5.tar.gz 682091 SHA256 c1583e931280e93d59f86a571a628e697d8d073dbfbfd58fa957617581c4edae SHA512 8e22a2bed622c81976b827fac81ca94de7023d710160cb6daa24d24269b068292ee2e36a5917bb5399340661a28f6480ac40c0a5253f71bd36b8bd78a56c7380 WHIRLPOOL 76503debe3baeded25067b6fcc1c9b5f103a7fb21035521bc3ab8b89547a566b557f38c073deb7d8a0867f1225edfe4d5587d14570ca2889812d3da73b4bf5c9
 EBUILD gitlab-shell-4.1.1.ebuild 3653 SHA256 06702f4658b8ac1bada6b322b833f65270656730417d8c9bb000ab1fb23af8f0 SHA512 dc63160d98dabfcbaa9982fe841fd581a1b1b2a968e7c7bd1ee336e449214fa89da33477f0d4744941ee3ecb8688386883a5923e78025bdcfd1556e68ea7371c WHIRLPOOL cd59e133d1d02f082f10312b358c6c8718898aa008a967fc85934656500ceefc44a6affae286123c481aa902fa51cdb7e7f98788057fdd08304ed99f643ef27c
 EBUILD gitlab-shell-5.0.0.ebuild 3653 SHA256 47e19d88939c146c5a7826ca538dba2caee3bc32944eab5b80d54ddbd4c196fc SHA512 1765624d95c14e2888f3e12be05ee727bae036265fc3c9bcfe17b509c0656de72728dcb580952d2a666b3fc99c3640f43862a9ea449599aeaa7cdb2509406347 WHIRLPOOL 2b935404098f288e729c3957007cc663afc3e76a4e04f536d5c7373cbae6857abb5a5cbd2d226355777e4af954a032e9b17211657d83a71bd2eef847028aea64
 EBUILD gitlab-shell-5.0.2.ebuild 3653 SHA256 9ed7d4b6dc1ca2d6ee0c928cfd9f33da45a09a070f781d33f217a4dc80296c5a SHA512 571e8c8cd6782f7d955d8d7ff481424c8aa2bea6ab2d702036f991065f75d8e08f26b1004a91a88e2a6add8d64018cec3bb7de131635b264ad7990c392467e1c WHIRLPOOL 491af5dd4248e2728048e51d21a12768966201a93731df7743baa24ccde12228c15c9288be7cefb9b29f3ed83f27729a6f1146506365ef14d3d516b7acaf6862
 EBUILD gitlab-shell-5.0.3.ebuild 3653 SHA256 e2c2cfb805378a6cd7e87d536a43c1d96ae489ce66b8168e6cbc42b703736c0e SHA512 65093fb42096002f2f715b18561f11cfb8afbc36188514a2d95023be53025946928e4e712d03d470d0bf52e6d0ecf8d0438b29cd5c55e162d85a15963e430b48 WHIRLPOOL 3278d0eea3f614f726d0df8d0e6a2f49c1e9d4341829f65fc29aa94544470b5b36ee7ce0d464af2b3b535f3f2f10c16c11d3c39dc87c34f9fbb693f61e9ffa3b
 EBUILD gitlab-shell-5.0.4.ebuild 3653 SHA256 c3e2b2dbb4c6b29bf46442791caee2116be2c698a9cbec9d91ac58b1a5d98adb SHA512 035508013085da402a5926faa5da6b6ac6ac726169122766e381096b316b13e887e99f178a8980d831d0a788549e26b07bdae284bc3a90b3a21b534071239581 WHIRLPOOL 807caff4227ea9fdb853a0e5622dea4d4e8b66c3c8dd86d98aedc14f20f00eeabdc1620ffded43cdb4c6b4009e96528bf1dae784256e40f034cd78d6460348b5
-MISC ChangeLog 2968 SHA256 d1febc13ae1f441766c488effc41cb4d3434d2c8874ce6f8665c71f3f7a94f55 SHA512 e67b8f8785660a0b9d9fb6849f0b14880ca90532b6b22a1ab7efc1be70ca166918364f938b3b1ad8efcb12e544ab9cdac7e0f279df9651dd51ba729ad435f233 WHIRLPOOL fb16d2699a95323ef28c2f97fd67f1882172688b11d1a63c29e5d8e01737b2af0dcf02d96122e0d2a0a751cf5acfa9ca5f0e487a2b2fa8ad4f4ff8f333c5093b
+EBUILD gitlab-shell-5.0.5.ebuild 3646 SHA256 aad0fca138202ef4f5e7885bf3edbe78fb0e524b263b7e770d4051b28e1cd5b1 SHA512 280fd3dc3da459882344eeebf8937fec8eedf50580b1a1fd1759d9e61e85b418407d6a7264acca8926201e1b29dc401f1226d7dd0496a26783c6ec09b7a97e68 WHIRLPOOL 1590459dfce361c2d049f431fee9b6cff435ac06ba1a126fb76688c4d4e7100b848e9e1875d18620ff0036b58afe78a743ac55793f79ca9c6bb1dca231ba7b03
+MISC ChangeLog 3126 SHA256 ff668f4ed3220cad60a61dcb32c09e134688774cad1fbf04793ab2e81bf38569 SHA512 35111c684523665a3da284320b1bd5012a36129bc1bd0fc3ebdd1561a130664196c80fac4302b14278dd29d982cc3d58aaab2c405d645b93c4e92a563d129746 WHIRLPOOL b955900f481159356154667945a3fa8f9dc738a4360ea348fe5087aa6ddba308a8a70968adcad670cff5f2bdb9a8b46ec2c1f823f200eac720c0387ed1d4c501
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
