@@ -1,3 +1,8 @@
+*gitlab-shell-5.0.5 (17 Jun 2017)
+
+  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.0.5.ebuild:
+  dev-vcs/gitlab-shell:  Add version 5.0.5
+
 *gitlab-shell-5.0.0 (13 Mar 2017)
 
   13 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.0.0.ebuild:
